--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,14 +7,16 @@
       <mat-card-content>
         <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
           <mat-form-field class="full-width white">
-            <input matInput placeholder="Email" name="username" [(ngModel)]="username" required>
+            <input matInput placeholder="Email" name="email" [(ngModel)]="email" (input)="onInputChange()"  required>
+            <mat-error *ngIf="emailFormControl.hasError('required')">Veuillez saisir un email</mat-error>
           </mat-form-field>
           <mat-form-field class="full-width white">
-            <input matInput type="password" placeholder="Mot de passe" name="password" [(ngModel)]="password" required>
+            <input matInput type="password" placeholder="Mot de passe" name="password" [(ngModel)]="password" (input)="onInputChange()" required>
+            <mat-error *ngIf="passwordFormControl.hasError('required')">Veuillez saisir un mot de passe</mat-error>
           </mat-form-field>
+          <mat-error *ngIf="error" class="login-error">{{error}}</mat-error>
          <div class="login-button-content"> <button mat-flat-button  class="login-button" type="submit" [disabled]="!loginForm.valid">Se connecter</button></div>
         </form>
       </mat-card-content>
     </mat-card>
   </div>
-  
