[Front] Ajout assignement d'une matière

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -16,6 +16,10 @@
                 <button routerLink="/professeurs" mat-button><mat-icon>list</mat-icon>Gestion des professeurs</button>
             </mat-list-item>
             <mat-divider></mat-divider>
+            <mat-list-item>
+                <button routerLink="assignement/ajout-assignement" mat-button><mat-icon>add_note</mat-icon>Gestion des assignements</button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
         </mat-nav-list>
         </mat-drawer>
         <mat-drawer-content>
