--- a/src/app/professeur/matiere/matiere.component.css
+++ b/src/app/professeur/matiere/matiere.component.css
@@ -36,3 +36,9 @@ table, tr, td {
     height: 30px !important;
   }
   
+  .center-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
