--- a/src/app/professeur/matiere/matiere.component.html
+++ b/src/app/professeur/matiere/matiere.component.html
@@ -38,7 +38,12 @@
         <td mat-cell *matCellDef="let a">{{ a.libelleNiveau }}</td>
       </ng-container>
 
-  
+      <ng-container matColumnDef="assignement">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let a">
+          <button mat-button color="warn" (click)="ajoutAssignement(a)">Ajouter un assignement</button>
+        </td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
