valider devoir drag and drop

--- a/src/app/detail-assignement/fiche-detail-assignement/fiche-detail-assignement.component.html
+++ b/src/app/detail-assignement/fiche-detail-assignement/fiche-detail-assignement.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title class="login-title"
+    <mat-card-title 
       >Fiche Detail Assignement</mat-card-title
     >
   </mat-card-header>
@@ -50,7 +50,7 @@
         <div class="list-info">
           <mat-list-item>
             <mat-icon matListItemIcon>date_range</mat-icon>
-            <div matListItemTitle>Date de rendu de devoir</div>
+            <div matListItemTitle>La date du rendu du devoir</div>
             <div matListItemLine class="list-desc">
               {{
                 detailAssignement.dateRenduEleve
