--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -21,7 +21,11 @@
             </mat-list-item>
             <mat-divider></mat-divider>
             <mat-list-item>
-                <button routerLink="assignement/ajout-assignement" mat-button><mat-icon>add_note</mat-icon>Ajouts des assignement</button>
+                <button routerLink="assignement/ajout-assignement" mat-button><mat-icon>add_note</mat-icon>Ajout d'un nouveau assignement</button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <button routerLink="valider-assignements-eleves" mat-button><mat-icon>check</mat-icon>Valider des devoirs rendus</button>
             </mat-list-item>
             <mat-divider></mat-divider>
         </mat-nav-list>
