--- a/src/app/detail-assignement/fiche-detail-assignement/fiche-detail-assignement.component.css
+++ b/src/app/detail-assignement/fiche-detail-assignement/fiche-detail-assignement.component.css
@@ -21,6 +21,7 @@
     width: 50%;
   }
   
+  
   .list-desc {
     white-space: pre-wrap;
   }
@@ -36,3 +37,19 @@
     justify-content: space-between;
     margin-top: 20px;
   }
+
+  .div-error {
+    margin-top: 20px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .error {
+    font-size: 16px !important;
+    background-color: var(--mat-form-field-error-text-color);
+    color: black;
+    padding:15px 15px 15px 15px;
+    text-align: center;
+  }
+  
