[Front] Liste des eleves qui son dans un assignement donné

--- a/src/app/assignement/fiche-assignement/fiche-assignement.component.html
+++ b/src/app/assignement/fiche-assignement/fiche-assignement.component.html
@@ -105,3 +105,7 @@
     }
   </mat-card-content>
 </mat-card>
+<br>
+<!--Liste des devoirs des élèves-->
+
+<app-detail-assignement [detailAssignementEleve]="detail"></app-detail-assignement>
