--- a/src/app/professeur/professeur.component.html
+++ b/src/app/professeur/professeur.component.html
@@ -33,6 +33,11 @@
       <td mat-cell *matCellDef="let a">{{ a.email }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="photo">
+      <th mat-header-cell *matHeaderCellDef>Image</th>
+      <td mat-cell *matCellDef="let a"><img style="margin-left: 20px;" src="{{a.photo?a.photo:'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRetK3z-l-tvWGrJwlKrM8_7Z8PZJLOGkqD1A&usqp=CAU'}}" width="35" alt="{{a.nom}}"></td>
+    </ng-container>
+
     <ng-container matColumnDef="matières">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let a">
