[Front] Voir detail assignement d'un éleve

--- a/src/app/assignement/fiche-assignement/detail-assignement/detail-assignement.component.html
+++ b/src/app/assignement/fiche-assignement/detail-assignement/detail-assignement.component.html
@@ -36,7 +36,7 @@
                 <ng-container matColumnDef="voir">
                   <th mat-header-cell *matHeaderCellDef>Detail de son assignement</th>
                   <td mat-cell *matCellDef="let element">
-                    <button mat-flat-button color="primary">Detail</button>
+                    <button mat-flat-button color="primary" (click)="detail(element)">Detail</button>
                   </td>
                 </ng-container>
               
