--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -32,6 +32,10 @@
                 <button routerLink="valider-assignements-eleves" mat-button><mat-icon>check</mat-icon>Valider des devoirs rendus</button>
             </mat-list-item>
             <mat-divider></mat-divider>
+            <mat-list-item>
+                <button routerLink="eleves" mat-button><mat-icon>person</mat-icon>Gestion des étudiants</button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
         </mat-nav-list>
         </mat-drawer>
         <mat-drawer-content>
