--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -40,6 +40,10 @@
                 <button routerLink="eleves" mat-button><mat-icon>person</mat-icon>Gestion des étudiants</button>
             </mat-list-item>
             <mat-divider></mat-divider>
+            <mat-list-item>
+                <button routerLink="mes-assignements" mat-button><mat-icon>description</mat-icon>Mes assignements</button>
+            </mat-list-item>
+            <mat-divider></mat-divider>
         </mat-nav-list>
         </mat-drawer>
         <mat-drawer-content>
