[FRONT] Modifier Assignement

--- a/src/app/assignement/fiche-assignement/fiche-assignement.component.html
+++ b/src/app/assignement/fiche-assignement/fiche-assignement.component.html
@@ -91,7 +91,7 @@
           </button>
         </div>
         <div class="btnModif">
-          <button mat-flat-button color="accent" routerLink="/professeur/ajout">
+          <button mat-flat-button color="accent" (click)="modifier(assignement)">
             <mat-icon>edit</mat-icon>Modifier
           </button>
         </div>
