[FRONT] Correction Modification Assignement

--- a/src/app/assignement/fiche-assignement/modifier-assignment/modifier-assignment.component.html
+++ b/src/app/assignement/fiche-assignement/modifier-assignment/modifier-assignment.component.html
@@ -20,6 +20,7 @@
                 <input
                 matInput
                 name="id"
+                readonly
                 [value]="assignement._id"
                 [(ngModel)]="assignement._id"
                 />
