[FRONT] Ajout tableau de bord dans Performance

--- a/src/app/eleve/performance/performance.component.css
+++ b/src/app/eleve/performance/performance.component.css
@@ -78,5 +78,10 @@
     --mat-form-field-focus-state-layer-opacity: 0;
   }
 
+  .performance-format{
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
   
 
