--- a/src/app/eleve/performance/performance.component.html
+++ b/src/app/eleve/performance/performance.component.html
@@ -13,7 +13,7 @@
       <div class="performance">
         <div class="filtre">
           <mat-list>
-            <div mat-subheader>Filtre : </div>
+            <div mat-subheader class="performance-format">Graphe <mat-slide-toggle [(ngModel)]="isTB"> Tableau de bord</mat-slide-toggle></div>
             <div style="display: flex; flex-wrap: wrap; margin-bottom: 20px">
               <form>
                 <div style="display: flex; justify-content: space-between;">
@@ -61,7 +61,30 @@
           </mat-list>
         </div>
         <div class="result">
-          <c-chart [data]="data" type="line" (chartRef)="handleChartRef($event)"></c-chart>
+          @if(isTB){
+            <table
+            mat-table
+            [dataSource]="performance"
+            class="mat-elevation-z8 demo-table">
+
+            <ng-container matColumnDef="_id">
+              <th mat-header-cell *matHeaderCellDef>Libelle</th>
+              <td mat-cell *matCellDef="let a">{{ a._id }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="moyenne">
+              <th mat-header-cell *matHeaderCellDef>Moyenne/20</th>
+              <td mat-cell *matCellDef="let a">{{ a.moyenne }}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            
+          </table>
+
+          }@else{
+            <c-chart [data]="data" type="line" (chartRef)="handleChartRef($event)"></c-chart>
+          }
         </div>
       </div>
     </mat-list>
