--- a/src/app/assignement/add-assignement/add-assignement.component.css
+++ b/src/app/assignement/add-assignement/add-assignement.component.css
@@ -123,5 +123,21 @@
 }
 
 
+.div-error {
+  margin-top: 20px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.error {
+  font-size: 16px !important;
+  background-color: var(--mat-form-field-error-text-color);
+  color: black;
+  padding:15px 15px 15px 15px;
+  text-align: center;
+}
+
+
 
   
