--- a/src/app/assignement/add-assignement/add-assignement.component.html
+++ b/src/app/assignement/add-assignement/add-assignement.component.html
@@ -15,7 +15,7 @@
             <input matInput placeholder="" name="nom" formControlName="firstCtrl" required (input)="onInputChange()">
           </mat-form-field>
           <div>
-            <button mat-button matStepperNext>>></button>
+            <button mat-button matStepperNext>Suivant</button>
           </div>
         </form>
       </mat-step>
@@ -27,8 +27,8 @@
             <input matInput name="description" formControlName="secondCtrl" placeholder="" (input)="onInputChange()" required>
           </mat-form-field>
           <div>
-            <button mat-button matStepperPrevious><<</button>
-            <button mat-button matStepperNext>>></button>
+            <button mat-button matStepperPrevious>Précédent</button>
+            <button mat-button matStepperNext>Suivant</button>
           </div>
         </form>
       </mat-step>
@@ -49,8 +49,8 @@
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
           <div>
-            <button mat-button matStepperPrevious><<</button>
-          <button mat-button matStepperNext>>></button>
+            <button mat-button matStepperPrevious>Précédent</button>
+          <button mat-button matStepperNext>Suivant</button>
           </div>
         </form>
       </mat-step>
@@ -64,7 +64,8 @@
             </mat-select>
           </mat-form-field>
           <div>
-            <button mat-button matStepperNext>>></button>
+            <button mat-button matStepperPrevious>Précédent</button>
+            <button mat-button matStepperNext>Suivant</button>
           </div>
         </form>
       </mat-step>
@@ -72,7 +73,7 @@
         <ng-template matStepLabel>Terminé</ng-template>
         <p>Veuillez clôturer votre ajout!</p>
         <div>
-          <button mat-button matStepperPrevious><<</button>
+          <button mat-button matStepperPrevious>Précédent</button>
           <button mat-flat-button (click)="onSubmit()" color="warn">Soumettre</button>
           <br>
           <div *ngIf="error" class="div-error"><div class="error">{{error}}</div></div>
