--- a/src/app/assignement/fiche-assignement/modifier-assignment/modifier-assignment.component.html
+++ b/src/app/assignement/fiche-assignement/modifier-assignment/modifier-assignment.component.html
@@ -13,7 +13,7 @@
             ngForm
             #assignementForm
             class="form"
-            (submit)="onSubmit($event); assignementForm.reset()"
+            (submit)="onSubmit($event);"
             >
             <mat-form-field>
                 <mat-label>ID</mat-label>
